--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=MySecondAppSpringBoot
 server.port=8082
+logging.level.org.springframework=ERROR
+logging.level.ru.arkhipov=DEBUG
