--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MySecondAppSpringBoot
-server.port=8082
+spring.application.name=Lab04_02
+server.port=8084
 logging.level.org.springframework=ERROR
 logging.level.ru.arkhipov=DEBUG
